@@ -1,6 +1,7 @@
 2018-01-04 Jan Kotanski <jan.kotanski@desy.de>
 	* add ZMQ Pickle source
 	* add line cut plotting
+	* add source timeout into configuration
 	* tagged as 0.7.0
 
 2017-12-20 Jan Kotanski <jan.kotanski@desy.de>
